2006-07-25  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc: Remove file.
	* Makefile.am (EXTRA_DIST): Remove Makefile.msvc.

2006-07-25  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: Remove file.
	* Makefile.am (EXTRA_DIST): Remove Makefile.vms.

2006-07-22  Bruno Haible  <bruno@clisp.org>

	* stdbool_.h: Update from gnulib.

	* quotearg.c: Update from gnulib.

	* pathmax.h: Update from gnulib.

	* obstack.h: Update from gnulib, keeping DLL_VARIABLE annotation.
	* obstack.c: Update from gnulib.

	* minmax.h: Update from gnulib.

	* mbswidth.c: Update from gnulib.

	* wcwidth.h: New file, from gnulib.
	* Makefile.am (libgettextlib_la_SOURCES): Add it.

	* getopt.c: Update from gnulib.
	* getopt1.c: Likewise.

	* gcd.c: Update from gnulib.

	* fwriteerror.c: Update from gnulib.

	* fnmatch_.h: Update from gnulib.
	* fnmatch.c: Likewise.
	* fnmatch_loop.c: Likewise.

	* fatal-signal.c: Include <config.h>, not "config.h".
	* findprog.c: Likewise.
	* pipe.c: Likewise.
	* progname.c: Likewise.
	* progreloc.c: Likewise.
	* wait-process.c: Likewise.

	* c-strcasecmp.c: Update from gnulib. Don't assume that
	UCHAR_MAX <= INT_MAX.
	* c-strncasecmp.c: Likewise.

	* copy-file.c: Update from gnulib.

	* atexit.c: Update from gnulib.

	* verify.h: New file, from gnulib.
	* argmatch.h: Update from gnulib, keeping DLL_VARIABLE annotation.
	* Makefile.am (libgettextlib_la_SOURCES): Add verify.h.

2006-07-21  Bruno Haible  <bruno@clisp.org>

	* gettext-0.15 released.

2006-07-14  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MOSTLYCLEANFILES): Add core and *.stackdump.

2006-07-13  Bruno Haible  <bruno@clisp.org>

	Fix construction of temporary directory names on mingw.
	* tmpdir.c (ISSLASH): New macro.
	(path_search): Use it, and remove also the first character if it is
	a slash.
	Reported by Steffen Macke <sdteffen@gmail.com>.

2006-07-13  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add javaversion.class.

2006-07-11  Bruno Haible  <bruno@clisp.org>
